vbnc/vbnc/vbnc/tests/Errors/30059.vb
Class T
    Const i As Byte = System.DBNull.Value
End Class